bk_ida/gccida/c0/nonoverlapping_memrefs_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2403:4: error: expected ';' after expression
rtx moffsety; // [rsp+E8h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2403:5: error: use of undeclared identifier 'moffsety'; did you mean 'offsety'?
rtx moffsety; // [rsp+E8h] [rbp-58h] 
    ^~~~~~~~
    offsety
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2401:9: note: 'offsety' declared here
__int64 offsety; // [rsp+D8h] [rbp-68h] 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2404:4: error: expected ';' after expression
rtx moffsetx; // [rsp+F0h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2404:5: error: use of undeclared identifier 'moffsetx'; did you mean 'offsetx'?
rtx moffsetx; // [rsp+F0h] [rbp-50h] 
    ^~~~~~~~
    offsetx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2402:9: note: 'offsetx' declared here
__int64 offsetx; // [rsp+E0h] [rbp-60h] 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2405:4: error: expected ';' after expression
rtx basey; // [rsp+F8h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2405:5: error: use of undeclared identifier 'basey'
rtx basey; // [rsp+F8h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2406:4: error: expected ';' after expression
rtx basex; // [rsp+100h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2406:5: error: use of undeclared identifier 'basex'
rtx basex; // [rsp+100h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2407:4: error: expected ';' after expression
rtx rtly; // [rsp+108h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2407:5: error: use of undeclared identifier 'rtly'
rtx rtly; // [rsp+108h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2408:4: error: expected ';' after expression
rtx rtlx; // [rsp+110h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2408:5: error: use of undeclared identifier 'rtlx'; did you mean 'rtx'?
rtx rtlx; // [rsp+110h] [rbp-30h] 
    ^~~~
    rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2391:5: note: 'rtx' declared here
rtx rtx; // [rsp+78h] [rbp-C8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2412:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( x[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2417:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( y[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2432:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( x[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2436:1: error: use of undeclared identifier 'moffsetx'; did you mean 'offsetx'?
moffsetx = v23; 
^~~~~~~~
offsetx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2402:9: note: 'offsetx' declared here
__int64 offsetx; // [rsp+E0h] [rbp-60h] 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2442:1: error: use of undeclared identifier 'moffsetx'; did you mean 'offsetx'?
moffsetx = adjust_offset_for_component_ref( ( tree)v25, v23); 
^~~~~~~~
offsetx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2402:9: note: 'offsetx' declared here
__int64 offsetx; // [rsp+E0h] [rbp-60h] 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2445:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( y[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2449:1: error: use of undeclared identifier 'moffsety'; did you mean 'offsety'?
moffsety = v22; 
^~~~~~~~
offsety
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/alias.c:2401:9: note: 'offsety' declared here
__int64 offsety; // [rsp+D8h] [rbp-68h] 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/nonoverlapping_memrefs_p/src/obj/alias.o] Error 1
